# -philosophers

./: CMakeLists.txt  README.adoc  README.md  main.cpp  philosophers.cpp  riscv_linux.cmake
